<resources>
    <string name="app_name">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">New conversation</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_end_conversation">End Conversation</string>
    <string name="action_contact_details">Contact Information</string>
    <string name="action_muc_details">Conference details</string>
    <string name="action_secure">Secure conversation</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to phone book</string>
    <string name="action_delete_contact">Delete Contact</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_conference_details">Conference Details</string>
    <string name="title_activity_contact_details">Contact Information</string>
    <string name="title_activity_conversations">Chat</string>
    <string name="title_activity_sharewith">Share with Conversation</string>
    <string name="title_activity_start_conversation">Start Conversation</string>
    <string name="title_activity_choose_contact">Choose contact</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <string name="unread_conversations">unread conversations</string>
    <string name="sending">sending…</string>
    <string name="encrypted_message">Decrypting message. Please wait…</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Are you sure you want to remove %s ?</string>
    <string name="remove_bookmark_text">Are you sure you want to remove %s ?</string>
    <string name="register_account">Register new account on server</string>
    <string name="share_with">Share with</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="invite_contact">Invite Contact</string>
    <string name="contacts">Contacts</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="crash_report_title">Chat has crashed</string>
    <string name="crash_report_message">By sending in stack traces you are helping the ongoing development of this application\n\n<b>Warning:</b> This will use your personal account to send the stack trace to the developer.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Unable to connect to account</string>
    <string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
    <string name="touch_to_fix">Touch here to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">The contact is not in your roster. Would you like to add it?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="send_rejected">rejected</string>
    <string name="receiving_image">Receiving image file (%1$d%%)</string>
    <string name="preparing_image">Preparing image for transmission</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear Conversation History</string>
    <string name="clear_histor_msg">Do you want to delete all messages within this Conversation?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
    <string name="delete_messages">Delete messages</string>
    <string name="also_end_conversation">End this conversation afterwards</string>
    <string name="choose_presence">Choose presence to contact</string>
    <string name="send_plain_text_message">Send TLS encrypted message</string>
    <string name="send_otr_message">Send OTR encrypted message</string>
    <string name="send_pgp_message">Send OpenPGP encrypted message</string>
    <string name="your_nick_has_been_changed">Your nickname has been changed</string>
    <string name="download_image">Download Image</string>
    <string name="image_offered_for_download"><i>Image file offered for download</i></string>
    <string name="send_unencrypted">Send unencrypted</string>
    <string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
    <string name="openkeychain_required">OpenKeychain</string>
    <string name="openkeychain_required_long">Chat utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n\nOpenKeychain is licensed under GPLv3 and available on F-Droid and Google Play.\n\n<small>(Please restart Chat afterwards.)</small></string>
    <string name="restart">Restart</string>
    <string name="install">Install</string>
    <string name="offering">offering…</string>
    <string name="waiting">waiting…</string>
    <string name="no_pgp_key">No OpenPGP Key found</string>
    <string name="contact_has_no_pgp_key">Chat is unable to encrypt your messages because your contact is not announcing his or hers public key.\n\n<small>Please ask your contact to setup OpenPGP.</small></string>
    <string name="no_pgp_keys">No OpenPGP Keys found</string>
    <string name="contacts_have_no_pgp_keys">Chat is unable to encrypt your messages because your contacts are not announcing their public key.\n\n<small>Please ask your contacts to setup OpenPGP.</small></string>
    <string name="encrypted_message_received"><i>Encrypted message received. Touch to view and decrypt.</i></string>
    <string name="encrypted_image_received"><i>Encrypted image received. Touch to view and decrypt.</i></string>
    <string name="image_file"><i>Image received. Touch to view</i></string>
    <string name="pref_general">Files</string>
    <string name="pref_xmpp_resource">XMPP resource</string>
    <string name="pref_xmpp_resource_summary">The name this client identifies itself with</string>
    <string name="pref_accept_files">Accept files</string>
    <string name="pref_accept_files_summary">Automatically accept files smaller than</string>
    <string name="pref_notification_settings">Notification Settings</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_summary">Notify when a new message arrives</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_sound_summary">Play ringtone when a new message arrives</string>
    <string name="pref_conference_notifications">Conference Information</string>
    <string name="pref_conference_notifications_summary">Notify when a new conference message arrives instead of only when your username is mentioned</string>
    <string name="pref_notification_grace_period">Notification grace period</string>
    <string name="pref_notification_grace_period_summary">Disable notifications for a short time after a carbon copy was received</string>
    <string name="pref_advanced_options">Advanced Options</string>
    <string name="pref_never_send_crash">Never send crash reports</string>
    <string name="pref_never_send_crash_summary">By sending in stack traces you are helping the ongoing development of Chat</string>
    <string name="pref_confirm_messages">Send message receipts</string>
    <string name="pref_confirm_messages_summary">Let your contact know when you have received and read a message</string>
    <string name="pref_ui_options">UI Options</string>
    <string name="openpgp_error">OpenKeychain reported an error</string>
    <string name="error_decrypting_file">I/O Error decrypting file</string>
    <string name="accept">Accept</string>
    <string name="error">An error has occurred</string>
    <string name="pref_grant_presence_updates">Grant presence updates</string>
    <string name="pref_grant_presence_updates_summary">Preemptively grant and ask for presence subscription for new contacts</string>
    <string name="your_fingerprint">Your fingerprint</string>
    <string name="verify">Verify</string>
    <string name="pref_force_encryption">Force end-to-end encryption</string>
    <string name="pref_force_encryption_summary">Always send messages encrypted (except for conferences)</string>
    <string name="pref_dont_save_encrypted">Don’t save messages</string>
    <string name="pref_dont_save_encrypted_summary">Encrypted messages are only stored as long as the application is running</string>
    <string name="title_activity_about">About Chat</string>
    <string name="pref_about_conversations_summary">Build and licensing information</string>
    <string name="pref_use_larger_font">Increase font size</string>
    <string name="pref_use_larger_font_summary">Use larger font sizes across the entire app for easier viewing</string>
    <string name="pref_use_send_button_to_indicate_status">Send button indicates status</string>
    <string name="pref_use_indicate_received">Request message receipts</string>
    <string name="pref_use_indicate_received_summary">Received messages will be marked with a green tick if supported</string>
    <string name="pref_use_send_button_to_indicate_status_summary">Colorize send button to indicate contact status</string>
    <string name="pref_conference_name">Conference name</string>
    <string name="pref_conference_name_summary">Use conference’s subject instead of conference name to identify conferences</string>
    <string name="remote_fingerprint">Remote Fingerprint</string>
    <string name="smp">Question &amp; Answer</string>
    <string name="otrverification">Fingerprints</string>
    <string name="shared_secret_hint">Question</string>
    <string name="shared_secret_secret">Shared Secret</string>
    <string name="verified">Verified</string>
    <string name="no_otr_session_found">No valid OTR session has been found!</string>
    <string name="pref_keep_foreground_service">Keep service in foreground</string>
    <string name="pref_keep_foreground_service_summary">Prevents the operating system from killing your connection</string>
    <string name="manually_verify">Manual Verification</string>
    <string name="pref_show_dynamic_tags">Show dynamic tags</string>
    <string name="pref_show_dynamic_tags_summary">Display read-only tags underneath contacts</string>
    <string name="pref_minimum_encryption">Encryption protocols</string>
    <string name="pref_minimum_encryption_summary">Minimum connection encryption protocol</string>
    <string name="pref_minimum_ciphers">Encryption ciphers</string>
    <string name="pref_minimum_ciphers_summary">Minimum connection encryption ciphers</string>
    <string name="qrcode_verification_explanation">Have your contact select ‘Scan Fingerprint’ as a verification method and scan your fingerprint using their camera to verify you.\n\nAfterwards you should scan their fingerprint.\n</string>
    <string name="never">Never</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="six_hours">6 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="one_day">1 day</string>
    <string name="one_week">1 week</string>
    <string name="one_month">1 month</string>
</resources>